--- a/5chapter5.tex
+++ b/5chapter5.tex
@@ -148,7 +148,7 @@ Figures~\ref{fig:online}~and~\ref{fig:online_mfc_vid} demonstrate the prediction
 \subsection{Calculating environment properties}
 \label{sec:property_calc_}
 In order for the robot to discover a mapping between sensor readings and environment properties, a unique numerical approximation of the underlying property must be calculated.
-See Figure~\ref{fig:property_calc} for a graphical overview of how the coefficient of friction and compliance are calculated and Figure~\ref{vis_properties} for a photo of each of the environmental properties.
+See Figure~\ref{fig:property_calc} for a graphical overview of how the coefficient of friction and compliance are calculated and Figure~\ref{fig:vis_properties} for a photo of each of the environmental properties.
 
 \paragraph{Mass} 
 The mass of each unit is approximated using an off-the-shelf kitchen scale.
@@ -222,7 +222,7 @@ We also encourage the reader to watch the supplemental video associated with thi
 %%%%%%%%%%%%%%%% TVR visualization
 
 $\Gamma$ selection helps focus attention on specific sensors and motion-phases that are particularly likely to provide information useful to predicting environment properties.
-Figure~\ref{fig:tvr_tables} illustrates the selected features for the topple-slide task as executed by the robot arm with either the Hand or spherical probe as end effectors (see Figure~\ref{wam}).
+Figure~\ref{fig:tvr_tables} illustrates the selected features for the topple-slide task as executed by the robot arm with either the Hand or spherical probe as end effectors (see Figure~\ref{fig:wam}).
 Notice how clusters of $\mathbf{x}^*$ can be interpreted as defining important sensory events in the task sequence, which the robot should pay most attention to.
 The yellow shaded region corresponds to the topple phase and the blue shaded region corresponds to the slide phase.
 The motion phases where the arm is not in contact with the object are identified as being unimportant, as are the phases that mark the beginning and end of both of the topple and sliding phases.
