--- a/mythesis.tex
+++ b/mythesis.tex
@@ -41,7 +41,7 @@
 \newfloat{Program}{h}{lop}
 
 \institution{The University Of British Columbia}
-\faculty{The Faculty of Graduate Studies}
+\faculty{The Faculty of Graduate and Postdoctoral Studies}
 \program{Computer Science}
 \institutionaddress{Vancouver}
 \previousdegree{B.CS. Hons. Co-op, The University of Manitoba, 2011}
@@ -88,7 +88,7 @@ Our methods are tested on a WAM manipulator equipped with either a spherical pro
 \input{acknowledgements}
 
 \chapter[Dedication]{} %% Optional
-Dedicated to Jill and Jade.
+\emph{To Jill and Jade.}
 
 \mainmatter % Now regular page numbering begins.
 
