--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,11 +1,13 @@
 \chapter{Acknowledgements}      %% Optional
-%This thesis would not have been possible if not for my supervisors Professor Dinesh Pai and Professor Michiel van de Panne, whose guidance, patience and trust allowed me to guide this project to its full potential. 
-%They are both phenomenal mentors, and together brought complementary perspectives to this work, enhancing both its depth and breadth. 
-%Individual thanks go to Professor Pai for securing the robotic system and for providing high-level direction and feedback, and to Professor van de Panne for providing concrete instruction and for never failing to find ample time in his busy schedule for stimulating discussion.
+This thesis would not have been possible if not for my supervisors Professor Dinesh Pai and Professor Michiel van de Panne, whose guidance, patience and trust allowed this project to meet its full potential. 
+They are both phenomenal advisors, and together brought complementary perspectives to this work, enhancing both its depth and breadth. 
+Individual thanks go to Professor Pai for securing the robotic system, for providing high-level direction and for donating much of his personal time while on official leave, and to Professor van de Panne for providing concrete instruction and for never failing to find ample time in his busy schedule for stimulating discussion.
 
-%Thanks also to Chuan Zhu, my lab-mate, with whom I shared much elation (and dissapointment!), for providing encouragement and comedy in the late-hours before deadlines. I also wish to thank Prof. Pai and Prof. Ian Mitchell, who, through their project courses (CPSC548 and CPSC515) at UBC, allowed me to pursue my interests in the early stages of my graduate career which eventually led me my current focus of study.  
+I am grateful to my second-reader and mentor, Professor Jim Little who provided much needed moral support through the inevitable dark times and who patiently guided me through finalizing my thesis.
 
-%Special thanks to Professor van de Panne and all members of the MOCCA reading group for listening to my (sometimes mundane) talks on topics related to my thesis. Similar thanks go to Professor Pai and the SMRT reading group for helping me guide topics in Neuroscience into this thesis.
+Thanks to Chuan Zhu, my "un-a-believa-da-ble" lab-mate, with whom I shared much elation (and dissapointment!), for providing encouragement and comedy in the late-hours before deadlines. 
+%I wish to thank Professor Pai and Professor Ian Mitchell, who, through their project courses (CPSC548 and CPSC515) at UBC, allowed me to freely pursue my interests in the early stages of my graduate career which eventually led to my current focus of study.  
 
-%Last but certainly not least, I would like to thank my family, both in Canada and in Taiwan, for their tireless effort to keep me secure, well-rested (and well-fed!) during the process of writing this thesis.
+Special thanks to Professor van de Panne and all members of the MOCCA reading group for listening to my (oft mundane) talks on topics related to my interests. Special thanks to Professor Pai and the SMRT reading group for helping me guide topics in Neuroscience into this thesis. Special thanks to Professor Little and the Robuddies reading group for lending me their undivided attention at my thesis talk.
 
+Last but certainly not least, I would like to thank my family, both in Canada and in Taiwan, for their tireless effort to keep me secure, well-rested (and well-fed!) during the process of writing this thesis.
